--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "phailgorithm/geo-php-client",
   "description": "A geo microservice client library for PHP.",
+  "version": "0.1.3",
   "type": "library",
   "autoload": {
     "psr-4": {
